5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4082/executions/1684_1105.log
== TEST (2019-04-29 12:38:54) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao= input("Descricao do brasao: ").lower()
print('Entrada:',brasao)

if(brasao== 'labo'):
	print("Casa: Stark")
elif(brasao== 'Leao'):
	print("casa: 'Lannister'")
elif(brasao== 'veado'):
	print("Casa:'Baratheon")
elif(brasao== 'dragao'):
	print("Casa: 'Targaryen")
elif(brasao= 'rosa'):
	print("Casa: 'Tyrell")
elif(brasao== 'sol'):
	print("Casa: 'Martell")
elif(brasao== 'lula'):
	print("Casa: 'Greyjoy")
elif(brasao== 'esfolado'):
	print("Casa: 'Bolton")
elif(brasao== 'turta'):
	print("Casa: 'Tully")
	
	
	
	
-- ERROR:
File "XXXX", line 15
    elif(brasao= 'rosa'):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:39:58) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao= input("Descricao do brasao: ").lower()
print('Entrada:',brasao)

if(brasao== 'labo'):
	print("Casa: Stark")
elif(brasao== 'Leao'):
	print("casa: Lannister'")
elif(brasao== 'veado'):
	print("Casa:Baratheon")
elif(brasao== 'dragao'):
	print("Casa: Targaryen")
elif(brasao= 'rosa'):
	print("Casa: Tyrell")
elif(brasao== 'sol'):
	print("Casa: Martell")
elif(brasao== 'lula'):
	print("Casa: Greyjoy")
elif(brasao== 'esfolado'):
	print("Casa: Bolton")
elif(brasao== 'turta'):
	print("Casa: Tully")
	
	
	
	
-- ERROR:
File "XXXX", line 15
    elif(brasao= 'rosa'):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:42:36) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao= input("Descricao do brasao: ").lower()
print('Entrada:',brasao)

if(brasao== "labo"):
	print("Casa: Stark")
elif(brasao== "Leao"):
	print("casa: Lannister'")
elif(brasao== "veado"):
	print("Casa:Baratheon")
elif(brasao== "dragao"):
	print("Casa: Targaryen")
elif(brasao= "rosa"):
	print("Casa: Tyrell")
elif(brasao== "sol"):
	print("Casa: Martell")
elif(brasao== "lula"):
	print("Casa: Greyjoy")
elif(brasao== "esfolado"):
	print("Casa: Bolton")
elif(brasao== "turta"):
	print("Casa: Tully")
	
	
	
	
-- ERROR:
File "XXXX", line 15
    elif(brasao= "rosa"):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:44:31) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao= input("Descricao do brasao: ").lower()
print('Entrada:',brasao)

if(brasao== "labo" ):
	print("Casa: Stark")
elif(brasao== "Leao" ):
	print("casa: Lannister'")
elif(brasao== "veado" ):
	print("Casa:Baratheon")
elif(brasao== "dragao" ):
	print("Casa: Targaryen")
elif(brasao= "rosa" ):
	print("Casa: Tyrell")
elif(brasao== "sol" ):
	print("Casa: Martell")
elif(brasao== "lula" ):
	print("Casa: Greyjoy")
elif(brasao== "esfolado" ):
	print("Casa: Bolton")
elif(brasao== "turta" ):
	print("Casa: Tully")
	
	
	
	
-- ERROR:
File "XXXX", line 15
    elif(brasao= "rosa" ):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:44:55) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao= input("Descricao do brasao: ").lower()
print('Entrada:',brasao)

if(brasao== "labo" ):
	print("Casa: Stark")
elif(brasao== "Leao" ):
	print("casa: Lannister'")
elif(brasao== "veado" ):
	print("Casa:Baratheon")
elif(brasao== "dragao" ):
	print("Casa: Targaryen")
elif(brasao== "rosa" ):
	print("Casa: Tyrell")
elif(brasao== "sol" ):
	print("Casa: Martell")
elif(brasao== "lula" ):
	print("Casa: Greyjoy")
elif(brasao== "esfolado" ):
	print("Casa: Bolton")
elif(brasao== "turta" ):
	print("Casa: Tully")
	
	
	
	
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:45:16) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao= input("Descricao do brasao: ").lower()
print('Entrada:',brasao)

if(brasao== "labo" ):
	print("Casa: Stark")
elif(brasao== "Leao" ):
	print("casa: Lannister'")
elif(brasao== "veado" ):
	print("Casa:Baratheon")
elif(brasao== "dragao" ):
	print("Casa: Targaryen")
elif(brasao== "rosa" ):
	print("Casa: Tyrell")
elif(brasao== "sol" ):
	print("Casa: Martell")
elif(brasao== "lula" ):
	print("Casa: Greyjoy")
elif(brasao== "esfolado" ):
	print("Casa: Bolton")
elif(brasao== "turta" ):
	print("Casa: Tully")
	
	
	
	
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:46:16) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao= input("Descricao do brasao: ").lower()
print('Entrada:',brasao)

if(brasao== "labo" ):
	print("Casa: Stark")
elif(brasao== "Leao" ):
	print("casa: Lannister'")
elif(brasao== "veado" ):
	print("Casa:Baratheon")
elif(brasao== "dragao" ):
	print("Casa: Targaryen")
elif(brasao== "rosa" ):
	print("Casa: Tyrell")
elif(brasao== "sol" ):
	print("Casa: Martell")
elif(brasao== "lula" ):
	print("Casa: Greyjoy")
elif(brasao== "esfolado" ):
	print("Casa: Bolton")
elif(brasao== "turta" ):
	print("Casa: Tully")
	
	
	
	
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:46:42) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao= input("Descricao do brasao: ").lower()
print('Entrada:',brasao)

if(brasao== "labo" ):
	print("Casa: Stark")
elif(brasao== "Leao" ):
	print("casa: Lannister'")
elif(brasao== "veado" ):
	print("Casa:Baratheon")
elif(brasao== "dragao" ):
	print("Casa: Targaryen")
elif(brasao== "rosa" ):
	print("Casa: Tyrell")
elif(brasao== "sol" ):
	print("Casa: Martell")
elif(brasao== "lula" ):
	print("Casa: Greyjoy")
elif(brasao== "esfolado" ):
	print("Casa: Bolton")
elif(brasao== "turta" ):
	print("Casa: Tully")
	
	
	
	
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:46:59) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao= input("Descricao do brasao: ").lower()
print('Entrada:',brasao)

if(brasao== "labo" ):
	print("Casa: Stark")
elif(brasao== "Leao" ):
	print("casa: Lannister'")
elif(brasao== "veado" ):
	print("Casa:Baratheon")
elif(brasao== "dragao" ):
	print("Casa: Targaryen")
elif(brasao== "rosa" ):
	print("Casa: Tyrell")
elif(brasao== "sol" ):
	print("Casa: Martell")
elif(brasao== "lula" ):
	print("Casa: Greyjoy")
elif(brasao== "esfolado" ):
	print("Casa: Bolton")
elif(brasao== "turta" ):
	print("Casa: Tully")
	
	
	
	
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:47:07) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao= input("Descricao do brasao: ").lower()
print('Entrada:',brasao)

if(brasao== "labo" ):
	print("Casa: Stark")
elif(brasao== "Leao" ):
	print("casa: Lannister'")
elif(brasao== "veado" ):
	print("Casa:Baratheon")
elif(brasao== "dragao" ):
	print("Casa: Targaryen")
elif(brasao== "rosa" ):
	print("Casa: Tyrell")
elif(brasao== "sol" ):
	print("Casa: Martell")
elif(brasao== "lula" ):
	print("Casa: Greyjoy")
elif(brasao== "esfolado" ):
	print("Casa: Bolton")
elif(brasao== "turta" ):
	print("Casa: Tully")
	
	
	
	
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:48:13) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao= input("Descricao do brasao: ").lower()
print('Entrada:',brasao)

if(brasao== "labo" ):
	print("Casa: Stark")
elif(brasao== "Leao" ):
	print("casa: Lannister")
elif(brasao== "veado" ):
	print("Casa:Baratheon")
elif(brasao== "dragao" ):
	print("Casa: Targaryen")
elif(brasao== "rosa" ):
	print("Casa: Tyrell")
elif(brasao== "sol" ):
	print("Casa: Martell")
elif(brasao== "lula" ):
	print("Casa: Greyjoy")
elif(brasao== "esfolado" ):
	print("Casa: Bolton")
elif(brasao== "turta" ):
	print("Casa: Tully")
	
	
	
	
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:48:33) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao= input("Descricao do brasao: ").lower()
print('Entrada:',brasao)

if(brasao== "labo" ):
	print("Casa: Stark")
elif(brasao== "Leao" ):
	print("casa: Lannister")
elif(brasao== "veado" ):
	print("Casa:Baratheon")
elif(brasao== "dragao" ):
	print("Casa: Targaryen")
elif(brasao== "rosa" ):
	print("Casa: Tyrell")
elif(brasao== "sol" ):
	print("Casa: Martell")
elif(brasao== "lula" ):
	print("Casa: Greyjoy")
elif(brasao== "esfolado" ):
	print("Casa: Bolton")
elif(brasao== "turta" ):
	print("Casa: Tully")
	
	
	
	
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:48:47) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao= input("Descricao do brasao: ").lower()
print('Entrada:',brasao)

if(brasao== "labo" ):
	print("Casa: Stark")
elif(brasao== "Leao" ):
	print("casa: Lannister")
elif(brasao== "veado" ):
	print("Casa:Baratheon")
elif(brasao== "dragao" ):
	print("Casa: Targaryen")
elif(brasao== "rosa" ):
	print("Casa: Tyrell")
elif(brasao== "sol" ):
	print("Casa: Martell")
elif(brasao== "lula" ):
	print("Casa: Greyjoy")
elif(brasao== "esfolado" ):
	print("Casa: Bolton")
elif(brasao== "turta" ):
	print("Casa: Tully")
	
	
	
	
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:48:57) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao= input("Descricao do brasao: ").lower()
print('Entrada:',brasao)

if(brasao== "labo" ):
	print("Casa: Stark")
elif(brasao== "Leao" ):
	print("casa: Lannister")
elif(brasao== "veado" ):
	print("Casa:Baratheon")
elif(brasao== "dragao" ):
	print("Casa: Targaryen")
elif(brasao== "rosa" ):
	print("Casa: Tyrell")
elif(brasao== "sol" ):
	print("Casa: Martell")
elif(brasao== "lula" ):
	print("Casa: Greyjoy")
elif(brasao== "esfolado" ):
	print("Casa: Bolton")
elif(brasao== "turta" ):
	print("Casa: Tully")
	
	
	
	
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:49:05) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao= input("Descricao do brasao: ").lower()
print('Entrada:',brasao)

if(brasao== "labo" ):
	print("Casa: Stark")
elif(brasao== "Leao" ):
	print("casa: Lannister")
elif(brasao== "veado" ):
	print("Casa:Baratheon")
elif(brasao== "dragao" ):
	print("Casa: Targaryen")
elif(brasao== "rosa" ):
	print("Casa: Tyrell")
elif(brasao== "sol" ):
	print("Casa: Martell")
elif(brasao== "lula" ):
	print("Casa: Greyjoy")
elif(brasao== "esfolado" ):
	print("Casa: Bolton")
elif(brasao== "turta" ):
	print("Casa: Tully")
	
	
	
	
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:49:21) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao= input("Descricao do brasao: ").lower()
print('Entrada:',brasao)

if(brasao== "labo" ):
	print("Casa: Stark")
elif(brasao== "Leao" ):
	print("casa: Lannister")
elif(brasao== "veado" ):
	print("Casa:Baratheon")
elif(brasao== "dragao" ):
	print("Casa: Targaryen")
elif(brasao== "rosa" ):
	print("Casa: Tyrell")
elif(brasao== "sol" ):
	print("Casa: Martell")
elif(brasao== "lula" ):
	print("Casa: Greyjoy")
elif(brasao== "esfolado" ):
	print("Casa: Bolton")
elif(brasao== "turta" ):
	print("Casa: Tully")
	
	
	
	
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:49:29) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao= input("Descricao do brasao: ").lower()
print('Entrada:',brasao)

if(brasao== "labo" ):
	print("Casa: Stark")
elif(brasao== "Leao" ):
	print("casa: Lannister")
elif(brasao== "veado" ):
	print("Casa:Baratheon")
elif(brasao== "dragao" ):
	print("Casa: Targaryen")
elif(brasao== "rosa" ):
	print("Casa: Tyrell")
elif(brasao== "sol" ):
	print("Casa: Martell")
elif(brasao== "lula" ):
	print("Casa: Greyjoy")
elif(brasao== "esfolado" ):
	print("Casa: Bolton")
elif(brasao== "turta" ):
	print("Casa: Tully")
	
	
	
	
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:49:44) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao= input("Descricao do brasao: ").lower()
print('Entrada:',brasao)

if(brasao== "labo" ):
	print("Casa: Stark")
elif(brasao== "Leao" ):
	print("casa: Lannister")
elif(brasao== "veado" ):
	print("Casa:Baratheon")
elif(brasao== "dragao" ):
	print("Casa: Targaryen")
elif(brasao== "rosa" ):
	print("Casa: Tyrell")
elif(brasao== "sol" ):
	print("Casa: Martell")
elif(brasao== "lula" ):
	print("Casa: Greyjoy")
elif(brasao== "esfolado" ):
	print("Casa: Bolton")
elif(brasao== "turta" ):
	print("Casa: Tully")
	
	
	
	
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:50:02) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao= input("Descricao do brasao: ").lower()
print('Entrada:',brasao)

if(brasao== "labo" ):
	print("Casa: Stark")
elif(brasao== "Leao" ):
	print("casa: Lannister")
elif(brasao== "veado" ):
	print("Casa:Baratheon")
elif(brasao== "dragao" ):
	print("Casa: Targaryen")
elif(brasao== "rosa" ):
	print("Casa: Tyrell")
elif(brasao== "sol" ):
	print("Casa: Martell")
elif(brasao== "lula" ):
	print("Casa: Greyjoy")
elif(brasao== "esfolado" ):
	print("Casa: Bolton")
elif(brasao== "turta" ):
	print("Casa: Tully")
	
	
	
	
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:51:29) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao= input("Descricao do brasao: ").lower()
print('Entrada:',brasao)

if(brasao== "labo" ):
	print("Casa: Stark")
elif(brasao== "Leao" ):
	print("casa: Lannister")
elif(brasao== "veado" ):
	print("Casa:Baratheon")
elif(brasao== "dragao" ):
	print("Casa: Targaryen")
elif(brasao== "rosa" ):
	print("Casa: Tyrell")
elif(brasao== "sol" ):
	print("Casa: Martell")
elif(brasao== "lula" ):
	print("Casa: Greyjoy")
elif(brasao== "esfolado" ):
	print("Casa: Bolton")
elif(brasao== "turta" ):
	print("Casa: Tully")
	
	
	
	
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:52:10) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao= input("Descricao do brasao: ").lower()
print('Entrada:',brasao)

if(brasao== "lobo" ):
	print("Casa: Stark")
elif(brasao== "leao" ):
	print("casa: Lannister")
elif(brasao== "veado" ):
	print("Casa:Baratheon")
elif(brasao== "dragao" ):
	print("Casa: Targaryen")
elif(brasao== "rosa" ):
	print("Casa: Tyrell")
elif(brasao== "sol" ):
	print("Casa: Martell")
elif(brasao== "lula" ):
	print("Casa: Greyjoy")
elif(brasao== "esfolado" ):
	print("Casa: Bolton")
elif(brasao== "turta" ):
	print("Casa: Tully")
	
	
	
	
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:52:25) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao= input("Descricao do brasao: ").lower()
print('Entrada:',brasao)

if(brasao== "lobo" ):
	print("Casa: Stark")
elif(brasao== "leao" ):
	print("casa: Lannister")
elif(brasao== "veado" ):
	print("Casa:Baratheon")
elif(brasao== "dragao" ):
	print("Casa: Targaryen")
elif(brasao== "rosa" ):
	print("Casa: Tyrell")
elif(brasao== "sol" ):
	print("Casa: Martell")
elif(brasao== "lula" ):
	print("Casa: Greyjoy")
elif(brasao== "esfolado" ):
	print("Casa: Bolton")
elif(brasao== "turta" ):
	print("Casa: Tully")
	
	
	
	
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:52:35) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao= input("Descricao do brasao: ").lower()
print('Entrada:',brasao)

if(brasao== "lobo" ):
	print("Casa: Stark")
elif(brasao== "leao" ):
	print("casa: Lannister")
elif(brasao== "veado" ):
	print("Casa:Baratheon")
elif(brasao== "dragao" ):
	print("Casa: Targaryen")
elif(brasao== "rosa" ):
	print("Casa: Tyrell")
elif(brasao== "sol" ):
	print("Casa: Martell")
elif(brasao== "lula" ):
	print("Casa: Greyjoy")
elif(brasao== "esfolado" ):
	print("Casa: Bolton")
elif(brasao== "turta" ):
	print("Casa: Tully")
	
	
	
	
-- EXECUTION TIME:
0.132155
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:52:57) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao= input("Descricao do brasao: ").lower()
print('Entrada:',brasao)

if(brasao== "lobo" ):
	print("Casa: Stark")
elif(brasao== "leao" ):
	print("casa: Lannister")
elif(brasao== "veado" ):
	print("Casa:Baratheon")
elif(brasao== "dragao" ):
	print("Casa: Targaryen")
elif(brasao== "rosa" ):
	print("Casa: Tyrell")
elif(brasao== "sol" ):
	print("Casa: Martell")
elif(brasao== "lula" ):
	print("Casa: Greyjoy")
elif(brasao== "esfolado" ):
	print("Casa: Bolton")
elif(brasao== "turta" ):
	print("Casa: Tully")
	
	
	
	
-- EXECUTION TIME:
0.120155
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:54:55) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao= input("Descricao do brasao: ").lower()
print('Entrada:',brasao)

if(brasao== "lobo" ):
	print("Casa: Stark")
elif(brasao== "leao" ):
	print("casa: Lannister")
elif(brasao== "veado" ):
	print("Casa:Baratheon")
elif(brasao== "dragao" ):
	print("Casa: Targaryen")
elif(brasao== "rosa" ):
	print("Casa: Tyrell")
elif(brasao== "sol" ):
	print("Casa: Martell")
elif(brasao== "lula" ):
	print("Casa: Greyjoy")
elif(brasao== "esfolado" ):
	print("Casa: Bolton")
elif(brasao== "turta" ):
	print("Casa: Tully")
else:
	print("Brasao invalido")
	
	
	
	
-- EXECUTION TIME:
0.144694
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
